# MCPVET

./: CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  config.json
cmake/: dependencies.cmake
include/glad/: glad.c  glad.h
init/configs/: default_config.json
init/languages/: en_US.json
init/models/: cube.model  cylinder.model  plane.model  sphere.model
init/shaders/: fragment.glsl  vertex.glsl
src/: CMakeLists.txt  main.cpp  mcnp_app.h
src/core/: CMakeLists.txt  app_state.h  camera.cpp  camera.h  coordinate_system.cpp  coordinate_system.h  geometry_factory.cpp  geometry_factory.h  geometry_model.cpp  geometry_model.h  log_manager.cpp  log_manager.h  vertex_mesh.cpp  vertex_mesh.h
src/io/: CMakeLists.txt  command_parser.cpp  command_parser.h  config_manager.cpp  config_manager.h  input_ast.cpp  input_ast.h  mcnp_parser.cpp  mcnp_parser.h  scene_manager.cpp  scene_manager.h
src/path/: savepath.cpp  savepath.h
src/render/: CMakeLists.txt  Framebuffer.cpp  Framebuffer.h  render.cpp  render.h
src/ui/: CMakeLists.txt  MWindows.cpp  MWindows.h  UILayoutManager.cpp  UILayoutManager.h  input_control.cpp  input_control.h  language_manager.cpp  language_manager.h  transform_controller.cpp  transform_controller.h  ui_interface.cpp  ui_interface.h
src/ui/panels/: BottomBarWindow.h  SideBarWindow.h  TopBarWindow.h  ViewportWindow.h
tests/: CMakeLists.txt  test.md  test_core.cpp  test_io.cpp  test_render.cpp  test_ui.cpp
